package dev.fredpena.designpattern.behavioral.observer;

/**
 * @author me@fredpena.dev
 * @created 26/09/2025  - 13:45
 */
public interface EventListener {
    void update(String filename);
}